--- a/index.html
+++ b/index.html
@@ -17,7 +17,30 @@
 			defer></script>
 	</head>
 	<body>
+		<!-- <div class="dark-mode">
+			<div class="glowing">
+				<span style="--i: 1"></span>
+				<span style="--i: 2"></span>
+				<span style="--i: 3"></span>
+			</div>
+			<div class="glowing">
+				<span style="--i: 1"></span>
+				<span style="--i: 2"></span>
+				<span style="--i: 3"></span>
+			</div>
+			<div class="glowing">
+				<span style="--i: 1"></span>
+				<span style="--i: 2"></span>
+				<span style="--i: 3"></span>
+			</div>
+			<div class="glowing">
+				<span style="--i: 1"></span>
+				<span style="--i: 2"></span>
+				<span style="--i: 3"></span>
+			</div>
+		</div> -->
 		<div class="container">
+			<div class="figure"></div>
 			<div class="circle">
 				<span class="score" aria-readonly="true">0</span>
 			</div>
@@ -30,6 +53,10 @@
 			<div class="audio-interface">
 				<button class="pause-resume"><i class="fa-solid fa-pause"></i></button>
 				<input class="volume" type="range" min="0" max="100" />
+			</div>
+			<div class="color-mode">
+				<button class="lightmode"></button>
+				<button class="darkmode"></button>
 			</div>
 		</div>
 		<audio
