--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<div class="container">
 			<div class="figure"></div>
 			<div class="circle">
-				<span class="score" aria-readonly="true">0</span>
+				<span class="score" >0</span>
 			</div>
 		</div>
 		<div class="timer-bg" aria-readonly="true">1s</div>
@@ -64,7 +64,7 @@
 			src="audio/lost_my_name.mp3"
 			controls
 			loop
-			autoplay
+			
 			preload="auto"></audio>
 		<audio id="click" src="audio/click.mp3"></audio>
 		<audio id="bonus" src="audio/bonus.mp3"></audio>
