--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			src="audio/lost_my_name.mp3"
 			controls
 			loop
-			
+			autoplay
 			preload="auto"></audio>
 		<audio id="click" src="audio/click.mp3"></audio>
 		<audio id="bonus" src="audio/bonus.mp3"></audio>
