--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<div class="container">
 			<div class="figure"></div>
 			<div class="circle">
-				<span class="score" >0</span>
+				<span class="score">0</span>
 			</div>
 		</div>
 		<div class="timer-bg" aria-readonly="true">1s</div>
@@ -68,6 +68,6 @@
 			preload="auto"></audio>
 		<audio id="click" src="audio/click.mp3"></audio>
 		<audio id="bonus" src="audio/bonus.mp3"></audio>
-		<script src="index.js"></script>
+		<script src="index.js" type="module"></script>
 	</body>
 </html>
