--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<span class="record">click the circles!</span>
 			<button class="play-again">Play</button>
 			<div class="audio-interface">
-				<button class="pause-resume"><i class="fa-solid fa-pause"></i></button>
+				<button class="pause-resume"><i class="fa-solid fa-play"></i></i></button>
 				<input class="volume" type="range" min="0" max="100" />
 			</div>
 			<div class="color-mode">
@@ -64,7 +64,6 @@
 			src="audio/lost_my_name.mp3"
 			controls
 			loop
-			autoplay
 			preload="auto"></audio>
 		<audio id="click" src="audio/click.mp3"></audio>
 		<audio id="bonus" src="audio/bonus.mp3"></audio>
