--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 		<div class="timer-bg" aria-readonly="true">1s</div>
 		<div class="game-over">
 			<span class="final-score">CIRCLES</span>
-			<span class="record">click the circles!</span>
+			<span class="record">click the circles! </span>
+			<span class="record">Timer in the background indicates time for clicking the next circle! </span>
 			<button class="play-again">Play</button>
 			<div class="audio-interface">
 				<button class="pause-resume"><i class="fa-solid fa-play"></i></i></button>
